[tool.poetry]
name = "zyjkit"
version = "0.1.0"
description = ""
authors = ["zyjared <zyjared@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"